# CopyPasteLRM

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  analysis_reward_distribution.py  analyze_hotpotqa.py  archive_done_results.sh  batch_rename.sh  check.ipynb  clean_pass@k=0_samples.py  contruct_rlhf_dataset.py  dataset.py  eval.sh  filter_samples_pass@k=0.py  infer.sh  inferPass@K.sh  infer_base_model.sh  infer_copypaste.sh  infer_copypaste_without_copying.sh  pass@k=0_subset_clean.py  pass@k=0_subset_contruct.py  poetry.toml  pyproject.toml  pytest.ini  reasonable_subset_clean.py  rename.py  requirements.txt  reward.py  rlhf.sh  rollout.sh  select_hard_subset_hotpotqa.ipynb  select_hard_subset_musique.ipynb  trans.py  valid_response_hotpotqa.ipynb  valid_response_musique.ipynb  view_response.ipynb  watch_swanlab.sh
copypastelrm/datasets/: BaseDatasetLoader.py  ConFiQA.py  CopyPaste.py  FaithEval.py  HotpotQA.py  MedAESQA.py  MuSiQue.py  MultiRC.py  PopQA.py  PubMedQA.py  Qasper.py  TwoWikiMultiHopQA.py  __init__.py
copypastelrm/eval/: eval.py  eval_1.py  eval_folder.py  eval_noise.py  generate_obsidian_md.py  (+1 more)
eval/: eval.py  generate_obsidian_md.py  hotpotqa.py  hotpotqa_metric.py  utils.py
inference/: hotpotqa.md  hotpotqa.py  infer.py  prompt.py
load_datasets/: faitheval.py  hotpotqa.py  load.py  musique.py  pubmedqa.py
slurm/: infer.sh
tests/: test_answer_reward_calculator.py  test_copy_reward_calculator.py  test_format_validator.py  test_length_validator.py  test_prompt.py  test_reward.py
train/: .env
utils/: git.py
(+189 files in other folders)
