[project]
name = "copypastelrm"
version = "0.1.0"
description = ""
authors = [
    {name = "wingchiuloong",email = "774817136@qq.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "datasets (>=4.4.1,<5.0.0)"
]

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"